--- a/0-misc/author.tex
+++ b/0-misc/author.tex
@@ -4,7 +4,7 @@
 
 \begin{wrapfigure}{O}{0.34\textwidth}
 %\centering
-\includegraphics[width=0.34\textwidth, trim=0 0 0 0.8cm]{./0-misc/images/vincent.jpg}
+\includegraphics[width=0.34\textwidth, trim=0 0 0 0.8cm]{./0-misc/images/vincent.png}
 %\caption{\label{fig:frog2}This is a figure caption.}
 \end{wrapfigure}
 
