--- a/thesis.tex
+++ b/thesis.tex
@@ -210,11 +210,12 @@
 \include{0-misc/samenvatting}
 \clearemptydoublepage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% here comes the summary in other languages
+% here comes the summary in other languages.
+% you can remove it if you do not want it.
 
 %\input{\fname{0-misc/summary}}
-\include{0-misc/summary_cn}
-\clearemptydoublepage
+% \include{0-misc/summary_cn}
+% \clearemptydoublepage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
