--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 
 \documentclass[12pt,hidelinks]{trailthesis}
 %\documentclass[a4paper,12pt]{book}
-
+\usepackage{etex}
 
 % include the draft option to include tags in the .dvi showing were
 % overfull hboxes are located, e.g.,
