revise according to Conchita's comments

--- a/2-chara/index.tex
+++ b/2-chara/index.tex
@@ -1,18 +1,16 @@
-\chapter{Crowd Characterization for Crowd Management using Social Media Data in City Events}\label{ch2_title}
+\chapter{Crowd Characterization in City Events}\label{ch2_title}
 
 %\renewcommand{\imagepath}[1]{\fname{2-serpar/images/#1}}
 %\graphicspath{{./2-serpar/images/}}
 \noindent\rule{\textwidth}{1pt}
 %\leftline{}
 
-In this chapter, we characterise city events in terms of various aspects using social media data. This answers the first research question, i.e. \textbf{RQ1. To what extent social media data are able to characterize crowds in city events, in terms of demographic composition, city-role composition, spatio-temporal distribution, Points of Interest preferences and word use?} 
+In this chapter, we characterise city events in terms of various aspects using social media data. This answers the first research question. 
 
 To this end, we screen a set of factors (i.e. visitor profile, crowd size, density, mobility, location, and semantics) that characterize crowd behaviour and introduce a set of proxies (i.e. demographics, city-role, crowd temporal distribution, post position, Points of Interests, and word use) derived from social media data. Furthermore, we characterize the crowd in two city-scale events, Sail 2015 and King's Day 2016, in terms of these proxies, and comparing them with information collected from events organizers and programs.
 
 Our findings show that it is possible to characterize crowds in city-scale events using social media data, thus paving the way for new real-time and planning applications on crowd monitoring and management for city-scale events.
 
-
-%This chapter is currently under review for journal publication.
 This chapter is published as a journal article: Gong, V. X., Daamen, W., Bozzon, A., \& Hoogendoorn, S. P. (2020). Crowd characterization for crowd management using social media data in city events. \emph{Travel Behaviour and Society}, 20, 192-212.
 
 \noindent\rule{\textwidth}{1pt}
