--- a/0-misc/title.tex
+++ b/0-misc/title.tex
@@ -87,7 +87,9 @@
 \vspace{1mm}
 at Delft University of Technology\\
 \vspace{1mm}
-by the authority of the Rector Magnificus, Prof.dr.ir. T.H.J.J. van den Hagen\\
+by the authority of the Rector Magnificus\\
+\vspace{1mm}
+Prof.dr.ir. T.H.J.J. van den Hagen\\
 \vspace{1mm}
 chair of the Board for Doctorates\\
 \vspace{1mm}
@@ -210,6 +212,8 @@ Prof. dr. ir.\ A. Bozzon \> Technische Universiteit Delft, copromotor\\
 \bigskip{}\\
 
 \noindent Independent members:\\
+\\
+
 % rem blow text until GS asks
 Prof. dr. ir.\ G. J. P. M.\ Houben \> Delft University of Technology\\
 Prof. dr.\ E.\ Simperl \> King's College London, United Kingdom\\
@@ -243,8 +247,9 @@ E-mail: info@rsTRAIL.nl\\
 \smallskip{}
 
 \noindent All rights reserved. No part of the material protected by this copyright notice may be reproduced or utilized in any form or by any means, electronic or mechanical, including photocopying, recording or by any information storage and retrieval system, without written permission of the author.
+\\
+% \smallskip{}
 
-\smallskip{}
 \noindent Printed in the Netherlands
 
 \end{small}
