--- a/2-chara/index.tex
+++ b/2-chara/index.tex
@@ -1,4 +1,6 @@
-\chapter{Crowd Characterization in City Events}\label{ch2_title}
+\chapter{Crowd Characterization for Crowd Management using Social Media Data in City Events}\label{ch2_title}
+% Below is the short chapter mark for page header 
+\chaptermark{Crowd Characterization in City Events}
 
 %\renewcommand{\imagepath}[1]{\fname{2-serpar/images/#1}}
 %\graphicspath{{./2-serpar/images/}}
