--- a/0-misc/title.tex
+++ b/0-misc/title.tex
@@ -199,7 +199,8 @@ born in Jiajiang, Sichuan
 \bigskip{}
 
 \noindent Composition of the doctoral committee:
-%\smallskip{}
+\smallskip{}
+
 \noindent \begin{flushleft}\begin{tabbing}
 \hspace*{70mm}\=\kill
 
