--- a/0-misc/title.tex
+++ b/0-misc/title.tex
@@ -7,7 +7,7 @@
 
 \newcommand{\thetitle}{Using Social Media to Characterise Crowds in City Events for Crowd Management} 
 \newcommand{\thesubtitle}{} 
-\newcommand{\theauthor}{Vincent\ X.\ GONG}
+\newcommand{\theauthor}{Your\ Name}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -115,7 +115,7 @@ born in Jiajiang, Sichuan
 \end{small}
 
 % ----------------------------------------------
-% Start, hidden title page for Graduate School
+% Start, below is the title page for Graduate School when submitting the Form B.
 
 %\newpage
 %\thispagestyle{empty}
@@ -184,7 +184,7 @@ born in Jiajiang, Sichuan
 %\end{center}
 %\end{small}
 
-% end, hidden title page for Graduate School
+% end, the title page for Graduate School when submitting the Form B.
 % ----------------------------------------------
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -217,8 +217,8 @@ Prof. dr. ir.\ A. Bozzon \> Technische Universiteit Delft, copromotor\\
 
 % rem blow text until GS asks
 Prof. dr. ir.\ G. J. P. M.\ Houben \> Delft University of Technology\\
-Prof. dr.\ E.\ Simperl \> King's College London, United Kingdom\\
-Dr.\ M.\ Gonzalez \> University of California, Berkeley, United States\\
+Prof. dr.\ M.\ Brambilla \> Politecnico di Milano, Italy\\
+Dr.\ M.\ Gonzalez \> University of California, Berkeley, U.S.\\
 Prof. dr. ir.\ M.\ Van\ Steen \> University of Twente\\
 % rem above text until GS asks
 \end{tabbing}\end{flushleft}
