Updates from Overleaf

--- a/0-misc/title.tex
+++ b/0-misc/title.tex
@@ -93,7 +93,7 @@ chair of the Board for Doctorates\\
 \vspace{1mm}
 to be defended publicly on\\
 \vspace{1mm}
-Friday 18th, September 2020 at 12:30 o'clock
+Monday 21st, September 2020 at 15:00 o'clock
 \vspace{1mm}
 \vspace{10mm} %5mm vertical space
 
