personal bio, general page margin

--- a/0-misc/author.tex
+++ b/0-misc/author.tex
@@ -4,12 +4,16 @@
 
 \begin{wrapfigure}{O}{0.34\textwidth}
 %\centering
-\includegraphics[width=0.34\textwidth, trim=0 0 0 0.8cm]{./0-misc/images/vincent.jpg}
-%\caption{\label{fig:frog2}This is a figure caption.}
+\includegraphics[width=0.34\textwidth, trim=0 0 0 0.8cm]{./0-misc/images/vincent.jpg}\par
+\caption{\label{fig:frog2}Vincent X. Gong}
 \end{wrapfigure}
 
-His research interests include social data analysis, crowd behaviour and crowd management in city events.
+Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.\\
 
+At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.\\
+
+
+Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
 
 
 \vspace*{\fill}
@@ -21,8 +25,14 @@ His research interests include social data analysis, crowd behaviour and crowd m
 \section*{Journal papers}
 
 \begin{enumerate}
-%  \item \textbf{Gong, Vincent X.}, et al. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
-  \item \textbf{Gong, Vincent X.}, Jie Yang, Winnie Daamen, Alessandro Bozzon, Serge P. Hoogendoorn, and Geert-Jan Houben. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
+    \item \textbf{Gong, Vincent X.}, et al. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
+    \item \textbf{Gong, Vincent X.}, Jie Yang, Winnie Daamen, Alessandro Bozzon, Serge P. Hoogendoorn, and Geert-Jan Houben. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
+    
+    % \item \textbf{Gong, Vincent X.}, Jie Yang, Winnie Daamen, Alessandro Bozzon, Serge P. Hoogendoorn, and Geert-Jan Houben. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
+    
+    % \item \textbf{Gong, Vincent X.}, Jie Yang, Winnie Daamen, Alessandro Bozzon, Serge P. Hoogendoorn, and Geert-Jan Houben. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
+    
+    % \item \textbf{Gong, Vincent X.}, Jie Yang, Winnie Daamen, Alessandro Bozzon, Serge P. Hoogendoorn, and Geert-Jan Houben. "Using social media for attendees density estimation in city-scale events." IEEE Access 6 (2018): 36325-36340.
 \end{enumerate}
 
 % to get page numbers a multiple of 8 it may be necessary to add some empty pages
