--- a/thesis.tex
+++ b/thesis.tex
@@ -1,10 +1,10 @@
 %
 % PhD thesis style
 % 
-% improved by Vincent X. Gong
-% with love
+% Improved by Vincent X. Gong
+% with love, October 2019
 %
-% October, 2019
+% Updated: Jul 2021
 % http://www.gong.im
 % http://https://www.gong.im/phd_thesis_latex_trail_template/
 %
@@ -28,6 +28,8 @@
 \documentclass[12pt,hidelinks]{trailthesis}
 %\documentclass[a4paper,12pt]{book}
 \usepackage{etex}
+\usepackage{geometry}
+\geometry{left=1cm,right=1cm}
 
 % include the draft option to include tags in the .dvi showing were
 % overfull hboxes are located, e.g.,
