--- a/0-misc/title.tex
+++ b/0-misc/title.tex
@@ -87,7 +87,7 @@
 \vspace{1mm}
 at Delft University of Technology\\
 \vspace{1mm}
-by the authority of the Rector Magnificus, Prof. dr. ir. T.H.J.J. van den Hagen\\
+by the authority of the Rector Magnificus, Prof. dr. ir. T.H.J.J. van der Hagen\\
 \vspace{1mm}
 chair of the Board for Doctorates\\
 \vspace{1mm}
