--- a/config/defs_base.tex
+++ b/config/defs_base.tex
@@ -30,7 +30,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% adjust maximum number of columns that can be used in a matrix environment
+% Adjust maximum number of columns that can be used in a matrix environment
 
 % add matrix cols
 %\setcounter{MaxMatrixCols}{30}
@@ -44,7 +44,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% config the dedication section
+% Config the dedication section
 
 \newcommand\dedication[1]{%
 	\thispagestyle{empty}%
