--- a/config/defs_user.tex
+++ b/config/defs_user.tex
@@ -19,8 +19,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% include following package to be able to have line numbers in from of
-% all text of thesis. this can be useful to include in the draft
+% include the following package to be able to have line numbers for
+% all text of the thesis. this can be useful to include in the draft
 % version of your thesis, such that the committee members can easily
 % point out where they have remarks/suggestions/corrections.
 
