--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 %
 % Trail PhD thesis style
-% Latest updated: dec 2024, version 2
+% Latest updated: Dec 2024, version 2
 % 
 % Improved, tested and released on Github by Vincent X. Gong
 % with love, October 2019, 1st version, Delft
@@ -10,17 +10,17 @@
 % https://gong.im
 %
 % --------------------------------------------------
-% Originally created by Rudy Negenborn
-% based on trail thesis style for LaTeX
+% created by Rudy Negenborn
+% based on the Trail thesis style for LaTeX
 % February 2008
 % more info about Rudy: rudy@negenborn.net
 % and: http://www.negenborn.net/mampc/
 %
 % --------------------------------------------------
-% How to get a Trail Thesis PDF in 3 mins?
+% How to get a Trail Thesis PDF in 3 minutes?
 % * read the README.md
 % * get started
-% Beast Wishes, Vincent, dec 2024, @Delft
+% Beast Wishes, Vincent, Dec 2024, @Delft
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -67,7 +67,7 @@
 %-------------------------------
 \mainmatter
 
-% to make sure that from here on american hyphenation is used, include
+% to make sure that from here on American hyphenation is used, include
 % the following
 
 \selectlanguage{american}
@@ -105,14 +105,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Section: Adjust settings
 %-------------------------------
-%% reset page numbering and set numbering to arabic
+%% reset page numbering and set numbering to Arabic
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Section: Adjust settings
 %-------------------------------
-% for reviewing purposes it may be useful to include line numbers.
+% For reviewing purposes it may be useful to include line numbers.
 % (this requires \usepackage{lineno} in the config/defs_base.tex)
 \begin{linenumbers}[1]
 
@@ -149,8 +149,8 @@
 % Section: Appendix
 %-------------------------------
 
-% here come the appendixes, if any.
-% it supports multiples appendix files. Please use the 1st appendix file as a template.
+% Here come the appendixes, if any.
+% It supports multiple appendix files. Please use the 1st appendix file as a template.
 
 \appendix
 
@@ -206,10 +206,10 @@
 \clearemptydoublepage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Section: Summary in Other languages
+% Section: Summary in Other Languages
 %-------------------------------
 % Here comes the summary in other languages.
-% It can be removed if no need.
+% It can be removed if there is no need.
 
 % \include{ch-x-others/summary_cn}
 % \clearemptydoublepage
@@ -230,7 +230,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% that's it!
+% That's it!
 
 \end{linenumbers}
 \end{document}
