--- a/thesis.tex
+++ b/thesis.tex
@@ -38,9 +38,8 @@
 %\documentclass[10pt,draft]{lib/trailthesis}
 
 
-\usepackage{etex}
-\usepackage{geometry}
-\geometry{left=1cm,right=1cm}
+% \usepackage{geometry}
+% \geometry{left=1cm,right=1cm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
